--- a/package.json
+++ b/package.json
@@ -7,16 +7,23 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "graphql:codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-query-devtools": "^5.89.0",
+    "graphql": "^16.11.0",
+    "graphql-request": "^7.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@graphql-codegen/cli": "6.0.0",
+    "@graphql-codegen/client-preset": "5.0.1",
+    "@graphql-codegen/introspection": "5.0.0",
+    "@parcel/watcher": "^2.5.1",
     "@tanstack/eslint-plugin-query": "^5.89.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
