--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.4",
     "@eslint/js": "^9.35.0",
     "@graphql-codegen/cli": "6.0.0",
     "@graphql-codegen/client-preset": "5.0.1",
